added btn, functions, divs, working on local storage now

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <input id="searchInput" type="text" />
     <button id="searchBtn">Search</button>
-
+    <div id="history"></div>
     <div id="current">
       <h2 id="cityName"></h2>
       <img src="" id="weatherIcon" />
@@ -25,7 +25,13 @@
       <h6 id="wind"></h6>
     </div>
 
-    <div id="forecast"></div>
+    <ul id="forecast6"></ul>
+    <ul id="forecast14"></ul>
+    <ul id="forecast22"></ul>
+    <ul id="forecast30"></ul>
+    <ul id="forecast38"></ul>
+
+    <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./script.js"></script>
   </body>
