local storage retains button info

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <ul id="forecast30"></ul>
     <ul id="forecast38"></ul>
 
+    <script>
+      $(document).ready(function () {
+        createHistoryBtn();
+      });
+    </script>
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./script.js"></script>
