--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <input id="searchInput" type="text" />
-    <button id="searchBtn">Search</button>
-    <div id="history"></div>
+    <input id="searchInput" type="text" class="btn-outline-info" />
+    <button id="searchBtn" class="btn btn-info">Search</button>
+    <div id="history" class="btn-group-vertical"></div>
     <div id="current">
       <h2 id="cityName"></h2>
       <img src="" id="weatherIcon" />
