--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Local Weather Checker!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -17,7 +17,7 @@
   <body>
     <input id="searchInput" type="text" class="btn-outline-info" />
     <button id="searchBtn" class="btn btn-info">Search</button>
-    <div id="history" class="btn-group-vertical"></div>
+    <div id="history" class="btn-group-horizontal"></div>
     <div id="current">
       <h2 id="cityName"></h2>
       <img src="" id="weatherIcon" />
@@ -26,11 +26,13 @@
       <h6 id="wind"></h6>
     </div>
 
-    <ul id="forecast6"></ul>
-    <ul id="forecast14"></ul>
-    <ul id="forecast22"></ul>
-    <ul id="forecast30"></ul>
-    <ul id="forecast38"></ul>
+    <div class="row">
+      <ul class="col" id="forecast6"></ul>
+      <ul class="col" id="forecast14"></ul>
+      <ul class="col" id="forecast22"></ul>
+      <ul class="col" id="forecast30"></ul>
+      <ul class="col" id="forecast38"></ul>
+    </div>
 
     <script>
       $(document).ready(function () {
